nohup.out
  File "/home/pi/OSS/Python/SendData.py", line 119
    time.sleep(1)
    ^
IndentationError: unexpected indent
  File "/home/pi/OSS/Python/SendData.py", line 119
    time.sleep(1)
    ^
IndentationError: unexpected indent
